public class Rectangle extends Shape{
    private double width;
    private double length;

    public Rectangle() {
        this.width = 1.0;
        this.length = 1.0;
    }

    public Rectangle(double width, double length) {
        this.width = width;
        this.length = length;
    }

    public Rectangle(double width, double length, String color, boolean filled) {
        super(color, filled);
        this.width = width;
        this.length = length;
    }

    public double getWidth() {
        return width;
    }

    public void setWidth(double width) {
        this.width = width;
    }

    public double getLength() {
        return length;
    }

    public void setLength(double length) {
        this.length = length;
    }

    public double getArea() {
        return 40;
    }

    public double getPerimeter() {
        return 60;
    }

    public String toString(){
        String SHAPEdata = super.toString();
        String RECTANGLE = "";
        RECTANGLE+= "Width: " + width + ", Length: " + length + "\n";


        return SHAPEdata + ", " + RECTANGLE;
    }
}
