public abstract class Shape {
    private String color;
    private boolean filled;

    //Constructor

    public Shape() {
        this.color = "red";
        this.filled = true;
    }

    public Shape(String color, boolean filled) {
        this.color = color;
        this.filled = filled;
    }



    //Getters and Setters
    public String getColor() {
        return color;
    }

    public void setColor(String color) {
        this.color = color;
    }

    public boolean isFilled() {
        return filled;
    }

    public void setFilled(boolean filled) {
        this.filled = filled;
    }

    public String toString(){
        String SHAPE = "";
        SHAPE+= "Color: " + color + "\n";
        SHAPE+= "Filled: " + filled + "\n";

        return SHAPE;
    }


    //Abstracts
    public abstract double getArea();

    public abstract double getPerimeter();
}
