@startuml
class Rectangle {
- double width
- double length
+ <<Create>> Rectangle()
+ <<Create>> Rectangle(double,double)
+ <<Create>> Rectangle(double,double,String,boolean)
+ double getWidth()
+ void setWidth(double)
+ double getLength()
+ void setLength(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
class Circle {
- double radius
+ <<Create>> Circle()
+ <<Create>> Circle(double)
+ <<Create>> Circle(double,String,boolean)
+ double getRadius()
+ void setRadius(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
class Square {
- double side
+ <<Create>> Square()
+ <<Create>> Square(double)
+ <<Create>> Square(double,String,boolean)
+ double getSide()
+ void setSide(double)
+ void setWidth(double)
+ void setLength(double)
}
abstract class Shape {
- String color
- boolean filled
+ <<Create>> Shape()
+ <<Create>> Shape(String,boolean)
+ String getColor()
+ void setColor(String)
+ boolean isFilled()
+ void setFilled(boolean)
+ String toString()
+ {abstract}double getArea()
+ {abstract}double getPerimeter()
}
class Main {
+ {static} void main(String[])
}


Shape <|-- Rectangle
Shape <|-- Circle
Rectangle <|-- Square
@enduml